--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "framer-motion": "^12.23.24",
+    "next": "16.0.1",
     "react": "19.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "react-icons": "^5.5.0",
+    "swiper": "^12.0.3",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.14",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "eslint-config-next": "16.0.1",
+    "postcss": "^8.4.35",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5"
   }
 }
